src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_UnsupportedAttrOnArray.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
	<Button>
		<Button.Content>
			<x:Array x:Type="{x:Type TextBlock}" xmlnsfoo="bar">
				<TextBlock> Hello </TextBlock>
				<TextBlock> World	is the text </TextBlock>
			</x:Array>
		</Button.Content>
	</Button>
</DockPanel>
</Page>
